# Epiphany-Platform

./: LICENSE  README.md
Epiphany/: .env  Cargo.toml
Epiphany-Backend/: Cargo.toml
Epiphany-Backend/epip-comments/: Cargo.toml
Epiphany-Backend/epip-member/: Cargo.toml
Epiphany-Backend/epip-soft/: Cargo.toml
Epiphany/epiphany-manager/: Cargo.toml
Epiphany/epiphany-manager/src/: lib.rs  main.rs
Epiphany/epiphany-manager/src/caches/: redis_service.rs
Epiphany/epiphany-manager/src/domain/req/: admin_menu_req.rs  admin_req.rs  app_category_req.rs  login_req.rs  mod.rs
Epiphany/epiphany-manager/src/domain/resp/: admin_menu_resp.rs  admin_resp.rs  app_category_resp.rs  mod.rs  organize_resp.rs
Epiphany/epiphany-manager/src/handler/: admin_menu_handler.rs  adminer_handler.rs  category_handler.rs  login_handler.rs  mod.rs  orgnize_handler.rs
Epiphany/epiphany-manager/src/initialize/: mod.rs
Epiphany/epiphany-manager/src/middleware/: auth_admin.rs  mod.rs
Epiphany/epiphany-manager/src/service/: admin_menu_service.rs  admin_service.rs  app_category_service.rs  company_service.rs  login_service.rs  mod.rs
Epiphany/epiphany_utils/: Cargo.toml
Epiphany/epiphany_utils/src/: headers_utils.rs  jwt_utils.rs  lib.rs  password_utils.rs  sony_flake_utils.rs  warp_response.rs
EpiphanyAndroid/: README.md  build.gradle  settings.gradle
epip-adminer/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.ts
epip-providers/: .env.development  note.shell.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+300 files in other folders)
