[package]
name = "epiphany-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
axum = "0.5.15"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tower-cookies = "0.7.0"
anyhow = "1.0.64"
dotenv = "0.15.0"
serde = "1.0.145"
serde_json = "1.0.85"
tera = "1.17.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
epiphany_entity = { path = "../epiphany_entity" }
epiphany_utils = { path = "../epiphany_utils" }
wrap_result = "0.1.1"
chrono = "0.4.22"
redis = { version = "0.21.6", features = ["tokio-comp"] }
state = "0.5.3"
log = "0.4.17"
async-trait = "0.1.57"

#---
[dependencies.sea-orm]
version = "0.9.2"
features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"]

