[package]
name = "epiphany_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "epiphany_utls"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
balloon-hash = "0.3.0"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10.6"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
axum = "0.5.15"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs"] }
tower-cookies = "0.7.0"
rs-snowflake = "0.6.0"